đo độ cao sóng, lưu dữ liệu hanfht rình